    + Extended username to 255 chars for LDAP logins;
    + Fixed search export invalid encoding and data may have been lost XLS file error;
    + Fixed invalid character encoding in API responses;
    + PowerDNS records cannot be created on slave zone;
    + Fixed subnet resizing bug if subnet contained slaves;
    + Added separate CSRF cookies for each address/subnet/pstn object;

== 1.20.1

    Translations:
    ----------------------------
    + French translation updated to verson 1.2;
    + German translation updated to verson 1.2;

    Bugfixes:
    ----------------------------
    + Fixed upgrade bug that selected invalid auth method for AD/LDAP users;
    + Fixed LDAP problems after 1.2 upgrade;
    + Fixed PowerDNS Slave with multiple masters delimiter error;
    + Fixed PowerDNS PTR records not being updated automatically;
    + Fixed csrf cookie bug when editing folder;
    + Fixed csrf cookie bug when truncationg subnet;
    + Fixed invalid code for API crypt method;
    + Fixed strange headings font display in Firefox;
    + Fixed invalid proxy settings in config.dist.php;
    + Fixed search same hostnames in db link form address table;
    + Fixed import subnet bug caused by fw object;
    + Fixed Subnet Import (Preview button > no action);

== 1.20

    New features:
    ------------
    + Added multiple simultaneous authentication methods (Apache, AD, LDAP, Radius, NetIQ);
    + Added fping scanning support;
    + Added selectable scanning type (ping/pear/fping);
    + Added L2 domains;
    + Added option to define address as default GW for subnet;
    + Added customizable address tags with compressed option;
    + Added temporary subnet / address shares;
    + Added quick subnet masks;
    + Added nameserver sets per subnets (jonashauge);
    + Added optional syslog as log location;
    + REST API:
        + documentation: http://phpipam.net/api-documentation/
        + API v2, old v1 support added
        + Complete rewrite of all API calls;